hphp/test/slow/parser/func_arg.php.expectf
Fatal error: Expected constant expression for initializer in %s/func_arg.php on line 7
